<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentOnboarding1"
    android:background="#70D6FF">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_marginTop="160dp"
        app:lottie_rawRes="@raw/lottie_fragment1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/solway_bold"
        android:text="@string/onboarding1_first"
        android:textColor="#5A1FC5"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/solway"
        android:text="@string/onboarding1_second"
        android:textColor="#7D41EA"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/tvMain"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding1_long"
        android:textSize="20sp"
        android:textColor="#69558E"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/neuton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>